<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="412dp"
        android:layout_height="240dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="409dp"
        android:layout_height="489dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:contentDescription="@string/appbar_scrolling_view_behavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAuthor">

        <EditText
            android:id="@+id/etVideoDescr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:ems="10"
            android:fontFamily="casual"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:labelFor="@id/etVideoDescr"
            android:minHeight="48dp"
            android:text="@string/videotext"
            android:typeface="serif"
            tools:text="@string/videotext" />
    </ScrollView>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:fontFamily="casual"
        android:text="@string/tvTitle"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvAuthor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoView" />

    <TextView
        android:id="@+id/tvAuthor"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginTop="2dp"
        android:fontFamily="casual"
        android:text="@string/tvAuthor"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="66dp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/next"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/videoView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoView"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/next" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabPlay"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/play"
        app:backgroundTint="#FFFFFF"
        app:fabCustomSize="96dp"
        app:layout_constraintBottom_toBottomOf="@+id/videoView"
        app:layout_constraintEnd_toStartOf="@+id/fabNext"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fabPrevious"
        app:layout_constraintTop_toTopOf="@+id/videoView"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/play"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:clickable="true"
        android:contentDescription="@string/previous"
        android:focusable="true"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/videoView"
        app:layout_constraintStart_toStartOf="@+id/videoView"
        app:layout_constraintTop_toBottomOf="@+id/videoView"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/previous" />
</androidx.constraintlayout.widget.ConstraintLayout>